# SkiaPlot

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  USAGE.md  build.sh
examples/: CMakeLists.txt  multiple_series.cpp  simple_plot.cpp  sine_wave.cpp
include/: skiaplot.h
src/: skiaplot.cpp
